minor fix - tighten spacing in TourArticle wrapper

--- a/code/src/components/Article/ArticleWrapper/ArticleWrapper.sass
+++ b/code/src/components/Article/ArticleWrapper/ArticleWrapper.sass
@@ -223,6 +223,11 @@
           height: auto
           margin-bottom: 20px
           padding: 5px 0
+          &:first-child
+            padding-top: 0
+          &:last-child
+            margin-bottom: 0
+            padding-bottom: 0
 
           &-date
             font-style: italic
